# OpenGLCameraXExample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/joyuiyeongl/openglcameraxexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/joyuiyeongl/openglcameraxexample/: CustomPreviewActivity.kt  CustomPreviewViewActivity.kt  MainActivity.kt  OpenGLActivity.kt
app/src/main/res/layout/: activity_custom_preview.xml  activity_custom_preview_view.xml  activity_main.xml  opengl_activity.xml
app/src/main/res/values/: strings.xml
appasjava/: build.gradle
appasjava/src/main/: AndroidManifest.xml
appasjava/src/main/res/layout/: activity_main.xml
appasjava/src/main/res/values/: strings.xml  themes.xml
appasjava/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
previewview/: README.md  build.gradle
previewview/src/main/: AndroidManifest.xml
previewview/src/main/cpp/: CMakeLists.txt  jni_hooks.cpp  renderer_jni.cpp
previewview/src/main/res/values/: ids.xml
ypreview/: build.gradle
ypreview/src/main/: AndroidManifest.xml
ypreview/src/main/cpp/: CMakeLists.txt
ypreview/src/main/res/layout/: custom_preview.xml  surface_view_render_surface.xml  texture_view_render_surface.xml
ypreview/src/main/res/values/: ids.xml
ypreviewjava/: build.gradle
ypreviewjava/src/main/: AndroidManifest.xml
ypreviewjava/src/main/cpp/: CMakeLists.txt  opengl_renderer_jni.cpp
ypreviewjava/src/main/res/layout/: custom_preview.xml
(+31 files in other folders)
